a3/parser.output
Terminals unused in grammar

    ARRAY
    ERROR
    O_COMMENT
    C_COMMENT
    COLON


State 103 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration-list

    2 declaration-list: declaration declaration-list
    3                 | declaration

    4 declaration: var-declaration
    5            | fun-declaration

    6 var-declaration: type ID SEMICOLON
    7                | type ID O_BRACKET NUM C_BRACKET SEMICOLON

    8 type: INT
    9     | VOID

   10 fun-declaration: type ID O_PAREN param-list C_PAREN compound_stmt

   11 param-list: param COMMA param-list
   12           | param
   13           | VOID

   14 param: type ID
   15      | type ID O_BRACKET C_BRACKET

   16 compound_stmt: O_BRACE local-declarations statement-list C_BRACE

   17 local-declarations: var-declaration local-declarations
   18                   | ε

   19 statement-list: statement statement-list
   20               | ε

   21 statement: expression_stmt
   22          | compound_stmt
   23          | selection_stmt
   24          | iteration_stmt
   25          | return_stmt

   26 expression_stmt: expression SEMICOLON

   27 selection_stmt: IF O_PAREN expression C_PAREN statement
   28               | IF O_PAREN expression C_PAREN statement ELSE statement

   29 iteration_stmt: WHILE O_PAREN expression C_PAREN statement

   30 return_stmt: RETURN SEMICOLON
   31            | RETURN expression SEMICOLON

   32 expression: var ASSIGN expression
   33           | simple_expression

   34 var: ID
   35    | ID O_BRACKET expression C_BRACKET

   36 simple_expression: additive_expression LESSER additive_expression
   37                  | additive_expression GREATER additive_expression
   38                  | additive_expression LESSER_EQ additive_expression
   39                  | additive_expression GREATER_EQ additive_expression
   40                  | additive_expression EQ additive_expression
   41                  | additive_expression NOT_EQ additive_expression
   42                  | additive_expression

   43 additive_expression: additive_expression PLUS term
   44                    | additive_expression MINUS term
   45                    | term

   46 term: term DIV factor
   47     | term MULT factor
   48     | factor

   49 factor: O_PAREN expression C_PAREN
   50       | var
   51       | call
   52       | NUM

   53 call: ID O_PAREN args C_PAREN

   54 args: arg_list
   55     | ε

   56 arg_list: expression COMMA arg_list
   57         | expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PLUS (258) 43
    ARRAY (259)
    MULT (260) 47
    MINUS (261) 44
    DIV (262) 46
    O_PAREN (263) 10 27 28 29 49 53
    ERROR (264)
    C_PAREN (265) 10 27 28 29 49 53
    SEMICOLON (266) 6 7 26 30 31
    COMMA (267) 11 56
    NOT_EQ (268) 41
    ASSIGN (269) 32
    O_BRACKET (270) 7 15 35
    C_BRACKET (271) 7 15 35
    O_BRACE (272) 16
    C_BRACE (273) 16
    O_COMMENT (274)
    C_COMMENT (275)
    COLON (276)
    INT (277) 8
    VOID (278) 9 13
    LESSER (279) 36
    GREATER (280) 37
    LESSER_EQ (281) 38
    GREATER_EQ (282) 39
    EQ (283) 40
    ID <id> (284) 6 7 10 14 15 34 35 53
    NUM <num> (285) 7 52
    WHILE (286) 29
    IF (287) 27 28
    ELSE (288) 28
    RETURN (289) 30 31


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    program <decl> (36)
        on left: 1
        on right: 0
    declaration-list <decl> (37)
        on left: 2 3
        on right: 1 2
    declaration <decl> (38)
        on left: 4 5
        on right: 2 3
    var-declaration <decl> (39)
        on left: 6 7
        on right: 4 17
    type <type> (40)
        on left: 8 9
        on right: 6 7 10 14 15
    fun-declaration <decl> (41)
        on left: 10
        on right: 5
    param-list <param> (42)
        on left: 11 12 13
        on right: 10 11
    param <param> (43)
        on left: 14 15
        on right: 11 12
    compound_stmt <stmt> (44)
        on left: 16
        on right: 10 22
    local-declarations <decl> (45)
        on left: 17 18
        on right: 16 17
    statement-list <stmt> (46)
        on left: 19 20
        on right: 16 19
    statement <stmt> (47)
        on left: 21 22 23 24 25
        on right: 19 27 28 29
    expression_stmt <stmt> (48)
        on left: 26
        on right: 21
    selection_stmt <stmt> (49)
        on left: 27 28
        on right: 23
    iteration_stmt <stmt> (50)
        on left: 29
        on right: 24
    return_stmt <stmt> (51)
        on left: 30 31
        on right: 25
    expression <expr> (52)
        on left: 32 33
        on right: 26 27 28 29 31 32 35 49 56 57
    var <var> (53)
        on left: 34 35
        on right: 32 50
    simple_expression <expr> (54)
        on left: 36 37 38 39 40 41 42
        on right: 33
    additive_expression <expr> (55)
        on left: 43 44 45
        on right: 36 37 38 39 40 41 42 43 44
    term <expr> (56)
        on left: 46 47 48
        on right: 43 44 45 46 47
    factor <expr> (57)
        on left: 49 50 51 52
        on right: 46 47 48
    call <stmt> (58)
        on left: 53
        on right: 51
    args <expr> (59)
        on left: 54 55
        on right: 53
    arg_list <expr> (60)
        on left: 56 57
        on right: 54 56


State 0

    0 $accept: • program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration-list  go to state 4
    declaration       go to state 5
    var-declaration   go to state 6
    type              go to state 7
    fun-declaration   go to state 8


State 1

    8 type: INT •

    $default  reduce using rule 8 (type)


State 2

    9 type: VOID •

    $default  reduce using rule 9 (type)


State 3

    0 $accept: program • $end

    $end  shift, and go to state 9


State 4

    1 program: declaration-list •

    $default  reduce using rule 1 (program)


State 5

    2 declaration-list: declaration • declaration-list
    3                 | declaration •

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 3 (declaration-list)

    declaration-list  go to state 10
    declaration       go to state 5
    var-declaration   go to state 6
    type              go to state 7
    fun-declaration   go to state 8


State 6

    4 declaration: var-declaration •

    $default  reduce using rule 4 (declaration)


State 7

    6 var-declaration: type • ID SEMICOLON
    7                | type • ID O_BRACKET NUM C_BRACKET SEMICOLON
   10 fun-declaration: type • ID O_PAREN param-list C_PAREN compound_stmt

    ID  shift, and go to state 11


State 8

    5 declaration: fun-declaration •

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end •

    $default  accept


State 10

    2 declaration-list: declaration declaration-list •

    $default  reduce using rule 2 (declaration-list)


State 11

    6 var-declaration: type ID • SEMICOLON
    7                | type ID • O_BRACKET NUM C_BRACKET SEMICOLON
   10 fun-declaration: type ID • O_PAREN param-list C_PAREN compound_stmt

    O_PAREN    shift, and go to state 12
    SEMICOLON  shift, and go to state 13
    O_BRACKET  shift, and go to state 14


State 12

   10 fun-declaration: type ID O_PAREN • param-list C_PAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 15

    type        go to state 16
    param-list  go to state 17
    param       go to state 18


State 13

    6 var-declaration: type ID SEMICOLON •

    $default  reduce using rule 6 (var-declaration)


State 14

    7 var-declaration: type ID O_BRACKET • NUM C_BRACKET SEMICOLON

    NUM  shift, and go to state 19


State 15

    9 type: VOID •
   13 param-list: VOID •

    C_PAREN   reduce using rule 13 (param-list)
    $default  reduce using rule 9 (type)


State 16

   14 param: type • ID
   15      | type • ID O_BRACKET C_BRACKET

    ID  shift, and go to state 20


State 17

   10 fun-declaration: type ID O_PAREN param-list • C_PAREN compound_stmt

    C_PAREN  shift, and go to state 21


State 18

   11 param-list: param • COMMA param-list
   12           | param •

    COMMA  shift, and go to state 22

    $default  reduce using rule 12 (param-list)


State 19

    7 var-declaration: type ID O_BRACKET NUM • C_BRACKET SEMICOLON

    C_BRACKET  shift, and go to state 23


State 20

   14 param: type ID •
   15      | type ID • O_BRACKET C_BRACKET

    O_BRACKET  shift, and go to state 24

    $default  reduce using rule 14 (param)


State 21

   10 fun-declaration: type ID O_PAREN param-list C_PAREN • compound_stmt

    O_BRACE  shift, and go to state 25

    compound_stmt  go to state 26


State 22

   11 param-list: param COMMA • param-list

    INT   shift, and go to state 1
    VOID  shift, and go to state 15

    type        go to state 16
    param-list  go to state 27
    param       go to state 18


State 23

    7 var-declaration: type ID O_BRACKET NUM C_BRACKET • SEMICOLON

    SEMICOLON  shift, and go to state 28


State 24

   15 param: type ID O_BRACKET • C_BRACKET

    C_BRACKET  shift, and go to state 29


State 25

   16 compound_stmt: O_BRACE • local-declarations statement-list C_BRACE

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 18 (local-declarations)

    var-declaration     go to state 30
    type                go to state 31
    local-declarations  go to state 32


State 26

   10 fun-declaration: type ID O_PAREN param-list C_PAREN compound_stmt •

    $default  reduce using rule 10 (fun-declaration)


State 27

   11 param-list: param COMMA param-list •

    $default  reduce using rule 11 (param-list)


State 28

    7 var-declaration: type ID O_BRACKET NUM C_BRACKET SEMICOLON •

    $default  reduce using rule 7 (var-declaration)


State 29

   15 param: type ID O_BRACKET C_BRACKET •

    $default  reduce using rule 15 (param)


State 30

   17 local-declarations: var-declaration • local-declarations

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 18 (local-declarations)

    var-declaration     go to state 30
    type                go to state 31
    local-declarations  go to state 33


State 31

    6 var-declaration: type • ID SEMICOLON
    7                | type • ID O_BRACKET NUM C_BRACKET SEMICOLON

    ID  shift, and go to state 34


State 32

   16 compound_stmt: O_BRACE local-declarations • statement-list C_BRACE

    O_PAREN  shift, and go to state 35
    O_BRACE  shift, and go to state 25
    ID       shift, and go to state 36
    NUM      shift, and go to state 37
    WHILE    shift, and go to state 38
    IF       shift, and go to state 39
    RETURN   shift, and go to state 40

    $default  reduce using rule 20 (statement-list)

    compound_stmt        go to state 41
    statement-list       go to state 42
    statement            go to state 43
    expression_stmt      go to state 44
    selection_stmt       go to state 45
    iteration_stmt       go to state 46
    return_stmt          go to state 47
    expression           go to state 48
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 33

   17 local-declarations: var-declaration local-declarations •

    $default  reduce using rule 17 (local-declarations)


State 34

    6 var-declaration: type ID • SEMICOLON
    7                | type ID • O_BRACKET NUM C_BRACKET SEMICOLON

    SEMICOLON  shift, and go to state 13
    O_BRACKET  shift, and go to state 14


State 35

   49 factor: O_PAREN • expression C_PAREN

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    expression           go to state 55
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 36

   34 var: ID •
   35    | ID • O_BRACKET expression C_BRACKET
   53 call: ID • O_PAREN args C_PAREN

    O_PAREN    shift, and go to state 56
    O_BRACKET  shift, and go to state 57

    $default  reduce using rule 34 (var)


State 37

   52 factor: NUM •

    $default  reduce using rule 52 (factor)


State 38

   29 iteration_stmt: WHILE • O_PAREN expression C_PAREN statement

    O_PAREN  shift, and go to state 58


State 39

   27 selection_stmt: IF • O_PAREN expression C_PAREN statement
   28               | IF • O_PAREN expression C_PAREN statement ELSE statement

    O_PAREN  shift, and go to state 59


State 40

   30 return_stmt: RETURN • SEMICOLON
   31            | RETURN • expression SEMICOLON

    O_PAREN    shift, and go to state 35
    SEMICOLON  shift, and go to state 60
    ID         shift, and go to state 36
    NUM        shift, and go to state 37

    expression           go to state 61
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 41

   22 statement: compound_stmt •

    $default  reduce using rule 22 (statement)


State 42

   16 compound_stmt: O_BRACE local-declarations statement-list • C_BRACE

    C_BRACE  shift, and go to state 62


State 43

   19 statement-list: statement • statement-list

    O_PAREN  shift, and go to state 35
    O_BRACE  shift, and go to state 25
    ID       shift, and go to state 36
    NUM      shift, and go to state 37
    WHILE    shift, and go to state 38
    IF       shift, and go to state 39
    RETURN   shift, and go to state 40

    $default  reduce using rule 20 (statement-list)

    compound_stmt        go to state 41
    statement-list       go to state 63
    statement            go to state 43
    expression_stmt      go to state 44
    selection_stmt       go to state 45
    iteration_stmt       go to state 46
    return_stmt          go to state 47
    expression           go to state 48
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 44

   21 statement: expression_stmt •

    $default  reduce using rule 21 (statement)


State 45

   23 statement: selection_stmt •

    $default  reduce using rule 23 (statement)


State 46

   24 statement: iteration_stmt •

    $default  reduce using rule 24 (statement)


State 47

   25 statement: return_stmt •

    $default  reduce using rule 25 (statement)


State 48

   26 expression_stmt: expression • SEMICOLON

    SEMICOLON  shift, and go to state 64


State 49

   32 expression: var • ASSIGN expression
   50 factor: var •

    ASSIGN  shift, and go to state 65

    $default  reduce using rule 50 (factor)


State 50

   33 expression: simple_expression •

    $default  reduce using rule 33 (expression)


State 51

   36 simple_expression: additive_expression • LESSER additive_expression
   37                  | additive_expression • GREATER additive_expression
   38                  | additive_expression • LESSER_EQ additive_expression
   39                  | additive_expression • GREATER_EQ additive_expression
   40                  | additive_expression • EQ additive_expression
   41                  | additive_expression • NOT_EQ additive_expression
   42                  | additive_expression •
   43 additive_expression: additive_expression • PLUS term
   44                    | additive_expression • MINUS term

    PLUS        shift, and go to state 66
    MINUS       shift, and go to state 67
    NOT_EQ      shift, and go to state 68
    LESSER      shift, and go to state 69
    GREATER     shift, and go to state 70
    LESSER_EQ   shift, and go to state 71
    GREATER_EQ  shift, and go to state 72
    EQ          shift, and go to state 73

    $default  reduce using rule 42 (simple_expression)


State 52

   45 additive_expression: term •
   46 term: term • DIV factor
   47     | term • MULT factor

    MULT  shift, and go to state 74
    DIV   shift, and go to state 75

    $default  reduce using rule 45 (additive_expression)


State 53

   48 term: factor •

    $default  reduce using rule 48 (term)


State 54

   51 factor: call •

    $default  reduce using rule 51 (factor)


State 55

   49 factor: O_PAREN expression • C_PAREN

    C_PAREN  shift, and go to state 76


State 56

   53 call: ID O_PAREN • args C_PAREN

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    $default  reduce using rule 55 (args)

    expression           go to state 77
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54
    args                 go to state 78
    arg_list             go to state 79


State 57

   35 var: ID O_BRACKET • expression C_BRACKET

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    expression           go to state 80
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 58

   29 iteration_stmt: WHILE O_PAREN • expression C_PAREN statement

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    expression           go to state 81
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 59

   27 selection_stmt: IF O_PAREN • expression C_PAREN statement
   28               | IF O_PAREN • expression C_PAREN statement ELSE statement

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    expression           go to state 82
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 60

   30 return_stmt: RETURN SEMICOLON •

    $default  reduce using rule 30 (return_stmt)


State 61

   31 return_stmt: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 83


State 62

   16 compound_stmt: O_BRACE local-declarations statement-list C_BRACE •

    $default  reduce using rule 16 (compound_stmt)


State 63

   19 statement-list: statement statement-list •

    $default  reduce using rule 19 (statement-list)


State 64

   26 expression_stmt: expression SEMICOLON •

    $default  reduce using rule 26 (expression_stmt)


State 65

   32 expression: var ASSIGN • expression

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    expression           go to state 84
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 66

   43 additive_expression: additive_expression PLUS • term

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    var     go to state 85
    term    go to state 86
    factor  go to state 53
    call    go to state 54


State 67

   44 additive_expression: additive_expression MINUS • term

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    var     go to state 85
    term    go to state 87
    factor  go to state 53
    call    go to state 54


State 68

   41 simple_expression: additive_expression NOT_EQ • additive_expression

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    var                  go to state 85
    additive_expression  go to state 88
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 69

   36 simple_expression: additive_expression LESSER • additive_expression

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    var                  go to state 85
    additive_expression  go to state 89
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 70

   37 simple_expression: additive_expression GREATER • additive_expression

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    var                  go to state 85
    additive_expression  go to state 90
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 71

   38 simple_expression: additive_expression LESSER_EQ • additive_expression

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    var                  go to state 85
    additive_expression  go to state 91
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 72

   39 simple_expression: additive_expression GREATER_EQ • additive_expression

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    var                  go to state 85
    additive_expression  go to state 92
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 73

   40 simple_expression: additive_expression EQ • additive_expression

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    var                  go to state 85
    additive_expression  go to state 93
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 74

   47 term: term MULT • factor

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    var     go to state 85
    factor  go to state 94
    call    go to state 54


State 75

   46 term: term DIV • factor

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    var     go to state 85
    factor  go to state 95
    call    go to state 54


State 76

   49 factor: O_PAREN expression C_PAREN •

    $default  reduce using rule 49 (factor)


State 77

   56 arg_list: expression • COMMA arg_list
   57         | expression •

    COMMA  shift, and go to state 96

    $default  reduce using rule 57 (arg_list)


State 78

   53 call: ID O_PAREN args • C_PAREN

    C_PAREN  shift, and go to state 97


State 79

   54 args: arg_list •

    $default  reduce using rule 54 (args)


State 80

   35 var: ID O_BRACKET expression • C_BRACKET

    C_BRACKET  shift, and go to state 98


State 81

   29 iteration_stmt: WHILE O_PAREN expression • C_PAREN statement

    C_PAREN  shift, and go to state 99


State 82

   27 selection_stmt: IF O_PAREN expression • C_PAREN statement
   28               | IF O_PAREN expression • C_PAREN statement ELSE statement

    C_PAREN  shift, and go to state 100


State 83

   31 return_stmt: RETURN expression SEMICOLON •

    $default  reduce using rule 31 (return_stmt)


State 84

   32 expression: var ASSIGN expression •

    $default  reduce using rule 32 (expression)


State 85

   50 factor: var •

    $default  reduce using rule 50 (factor)


State 86

   43 additive_expression: additive_expression PLUS term •
   46 term: term • DIV factor
   47     | term • MULT factor

    MULT  shift, and go to state 74
    DIV   shift, and go to state 75

    $default  reduce using rule 43 (additive_expression)


State 87

   44 additive_expression: additive_expression MINUS term •
   46 term: term • DIV factor
   47     | term • MULT factor

    MULT  shift, and go to state 74
    DIV   shift, and go to state 75

    $default  reduce using rule 44 (additive_expression)


State 88

   41 simple_expression: additive_expression NOT_EQ additive_expression •
   43 additive_expression: additive_expression • PLUS term
   44                    | additive_expression • MINUS term

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 41 (simple_expression)


State 89

   36 simple_expression: additive_expression LESSER additive_expression •
   43 additive_expression: additive_expression • PLUS term
   44                    | additive_expression • MINUS term

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 36 (simple_expression)


State 90

   37 simple_expression: additive_expression GREATER additive_expression •
   43 additive_expression: additive_expression • PLUS term
   44                    | additive_expression • MINUS term

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 37 (simple_expression)


State 91

   38 simple_expression: additive_expression LESSER_EQ additive_expression •
   43 additive_expression: additive_expression • PLUS term
   44                    | additive_expression • MINUS term

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 38 (simple_expression)


State 92

   39 simple_expression: additive_expression GREATER_EQ additive_expression •
   43 additive_expression: additive_expression • PLUS term
   44                    | additive_expression • MINUS term

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 39 (simple_expression)


State 93

   40 simple_expression: additive_expression EQ additive_expression •
   43 additive_expression: additive_expression • PLUS term
   44                    | additive_expression • MINUS term

    PLUS   shift, and go to state 66
    MINUS  shift, and go to state 67

    $default  reduce using rule 40 (simple_expression)


State 94

   47 term: term MULT factor •

    $default  reduce using rule 47 (term)


State 95

   46 term: term DIV factor •

    $default  reduce using rule 46 (term)


State 96

   56 arg_list: expression COMMA • arg_list

    O_PAREN  shift, and go to state 35
    ID       shift, and go to state 36
    NUM      shift, and go to state 37

    expression           go to state 77
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54
    arg_list             go to state 101


State 97

   53 call: ID O_PAREN args C_PAREN •

    $default  reduce using rule 53 (call)


State 98

   35 var: ID O_BRACKET expression C_BRACKET •

    $default  reduce using rule 35 (var)


State 99

   29 iteration_stmt: WHILE O_PAREN expression C_PAREN • statement

    O_PAREN  shift, and go to state 35
    O_BRACE  shift, and go to state 25
    ID       shift, and go to state 36
    NUM      shift, and go to state 37
    WHILE    shift, and go to state 38
    IF       shift, and go to state 39
    RETURN   shift, and go to state 40

    compound_stmt        go to state 41
    statement            go to state 102
    expression_stmt      go to state 44
    selection_stmt       go to state 45
    iteration_stmt       go to state 46
    return_stmt          go to state 47
    expression           go to state 48
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 100

   27 selection_stmt: IF O_PAREN expression C_PAREN • statement
   28               | IF O_PAREN expression C_PAREN • statement ELSE statement

    O_PAREN  shift, and go to state 35
    O_BRACE  shift, and go to state 25
    ID       shift, and go to state 36
    NUM      shift, and go to state 37
    WHILE    shift, and go to state 38
    IF       shift, and go to state 39
    RETURN   shift, and go to state 40

    compound_stmt        go to state 41
    statement            go to state 103
    expression_stmt      go to state 44
    selection_stmt       go to state 45
    iteration_stmt       go to state 46
    return_stmt          go to state 47
    expression           go to state 48
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 101

   56 arg_list: expression COMMA arg_list •

    $default  reduce using rule 56 (arg_list)


State 102

   29 iteration_stmt: WHILE O_PAREN expression C_PAREN statement •

    $default  reduce using rule 29 (iteration_stmt)


State 103

   27 selection_stmt: IF O_PAREN expression C_PAREN statement •
   28               | IF O_PAREN expression C_PAREN statement • ELSE statement

    ELSE  shift, and go to state 104

    ELSE      [reduce using rule 27 (selection_stmt)]
    $default  reduce using rule 27 (selection_stmt)


State 104

   28 selection_stmt: IF O_PAREN expression C_PAREN statement ELSE • statement

    O_PAREN  shift, and go to state 35
    O_BRACE  shift, and go to state 25
    ID       shift, and go to state 36
    NUM      shift, and go to state 37
    WHILE    shift, and go to state 38
    IF       shift, and go to state 39
    RETURN   shift, and go to state 40

    compound_stmt        go to state 41
    statement            go to state 105
    expression_stmt      go to state 44
    selection_stmt       go to state 45
    iteration_stmt       go to state 46
    return_stmt          go to state 47
    expression           go to state 48
    var                  go to state 49
    simple_expression    go to state 50
    additive_expression  go to state 51
    term                 go to state 52
    factor               go to state 53
    call                 go to state 54


State 105

   28 selection_stmt: IF O_PAREN expression C_PAREN statement ELSE statement •

    $default  reduce using rule 28 (selection_stmt)
